# ML-Fragment-Optimizer

./: .gitignore  ACTIVE_LEARNING_MODULE.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CLEANUP_SUMMARY.md  DATA_UTILITIES_QUICK_START.md  DATA_UTILITIES_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  IMPROVEMENTS.md  INDEX.md  MANIFEST.in  Makefile  PROJECT_SUMMARY.md  QSAR_MODULE_SUMMARY.md  QSAR_QUICK_REFERENCE.md  QUICK_START.md  README.md  README_NEW.md  SESSION_SUMMARY.md  TEST_SUMMARY.md  environment.yml  pyproject.toml  requirements-dev.txt  requirements.txt  requirements_data.txt  requirements_qsar.txt  setup.py  test_installation.py
configs/: active_learning.yaml  admet_model.yaml  evaluation.yaml  synthesis_constraints.yaml
data/benchmarks/: benchmark_data.py
data/building_blocks/: catalog_manager.py
data/datasets/: README.md
docs/: DATA_UTILITIES_GUIDE.md  QSAR_GETTING_STARTED.md
examples/: active_learning_demo.py  data_processing_example.py  evaluation_examples.py  example_inference.py  example_training.py  qsar_complete_workflow.py  synthesis_example_simple.py  synthesis_example_workflow.py
notebooks/: 01_quick_start.ipynb
src/ml_fragment_optimizer/: __init__.py
src/ml_fragment_optimizer/active_learning/: __init__.py  acquisition_functions.py  bayesian_opt.py  diversity_sampler.py  experiment_designer.py  optimizer.py  portfolio_selector.py
src/ml_fragment_optimizer/cli/: __init__.py  active_learning_loop.py  benchmark_models.py  optimize_fragment.py  plan_synthesis.py  predict_properties.py  train_admet_model.py
src/ml_fragment_optimizer/evaluation/: __init__.py  applicability_domain.py  benchmarks.py  calibration.py  metrics.py  prospective_validation.py  significance_testing.py
src/ml_fragment_optimizer/models/: __init__.py  admet_predictor.py  chemprop_wrapper.py  data_utils.py  fingerprints.py  uncertainty.py
src/ml_fragment_optimizer/qsar/: __init__.py  activity_cliffs.py  bioisostere_suggester.py  feature_importance.py  free_wilson.py  mmpa.py  model_builder.py  sar_visualization.py
src/ml_fragment_optimizer/synthesis/: __init__.py  building_blocks.py  retrosynthesis.py  route_scoring.py  sa_score.py
src/ml_fragment_optimizer/utils/: __init__.py  assay_processing.py  config_loader.py  data_processing.py  dataset_loaders.py  featurizers.py  format_converters.py  logging_utils.py  molecular_cleaning.py
tests/: __init__.py  conftest.py  test_data_utils.py  test_featurizers.py  test_qsar.py
tests/active_learning/: __init__.py  test_acquisition_functions.py  test_bayesian_opt.py  test_diversity_sampler.py
tests/cli/: test_active_learning_loop.py  test_benchmark_models.py  test_optimize_fragment.py  test_plan_synthesis.py  test_predict_properties.py  test_train_admet_model.py
